[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/game/ui/town/tavern_ui.gd" id="1_tavern"]

[node name="TavernUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tavern")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.05, 0.03, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 53.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "THE ROARING DRAGON TAVERN"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = 53.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
text = "Gold: 500"
horizontal_alignment = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 100.0
offset_right = 430.0
offset_bottom = -100.0
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Available Recruits:"

[node name="Scroll" type="ScrollContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="List" type="VBoxContainer" parent="Panel/VBox/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="CardContainer" type="CenterContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -500.0
grow_horizontal = 0
grow_vertical = 2

[node name="BackButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "LEAVE TAVERN"

[connection signal="pressed" from="Panel/BackButton" to="." method="_on_back_pressed"]
